# trade-engage-service-integration

./: .env.backup  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pre-commit-config.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: README.md  api.md  architecture.md  celery_architecture.md  troubleshooting.md
migrations/: env.py
migrations/versions/: 1adfe0f8fab7_add_claimed_at_field_to_job_routings.py  1dbe2b8a7501_merge_heads_revenue_and_timestamp_fixes.py  2c6fc23421e6_merge_heads_provider_associations_and_.py  39a4593f6696_alter_created_at_default_in_company_.py  43355eb99cca_remove_category_id_from_jobs.py  5d055f4425ca_fix_jobs_timestamp_timezone_final.py  667caac8a79b_update_jobs_table_to_match_current_model.py  698b53ad52db_add_company_provider_association_and_.py  6e0343f85d99_add_outbox_events_table.py  8919a5025a32_add_created_at_to_company_skills.py  989b3b477569_add_default_now_to_updated_at_company_.py  9c4ab929ae1c_initial_migration.py  a3f59d1a7389_add_job_skills_and_category_fields.py  c690e5a08a33_merge_heads_company_skills_and_provider_.py  dd272f55cb0f_fix_job_routings_schema_add_missing_.py  eace59fb355b_fix_timestamp_timezone_issues.py  fe67670b0e52_add_defaults_to_job_categories.py  move_revenue_to_job_routing.py
monitoring/: prometheus.yml
scripts/: init_db.sql  seed_data.py  setup.sh
src/: __init__.py  main.py
src/api/: __init__.py  app.py  dependencies.py
src/api/middleware/: __init__.py  error_handler.py  logging.py  rate_limiter.py
src/api/routes/: __init__.py  admin.py  health.py  jobs.py  webhooks.py
src/api/schemas/: __init__.py  common.py  job.py  provider.py
src/application/: __init__.py
src/application/interfaces/: __init__.py  providers.py  repositories.py  services.py
src/application/services/: __init__.py  data_transformer.py  job_matching_engine.py  provider_manager.py  rate_limiter.py  retry_handler.py  transactional_outbox.py
src/application/use_cases/: __init__.py  batch_sync.py  create_job.py  create_routing.py  poll_updates.py  sync_job.py
src/background/: __init__.py  celery_app.py  scheduler.py
src/background/tasks/: __init__.py  cleanup_jobs.py  sync_jobs.py
src/background/workers/: __init__.py  outbox_worker.py  poll_worker.py  rate_limiter.py  retry_handler.py  sync_worker.py
src/config/: __init__.py  database.py  logging.py  settings.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  company.py  job.py  job_routing.py  technician.py
src/domain/events/: __init__.py  job_routed.py  sync_completed.py  sync_failed.py
src/domain/exceptions/: __init__.py  (+3 more)
src/infrastructure/: __init__.py
tests/: conftest.py
tests/integration/: test_service_titan_provider.py
tests/unit/: test_sync_job_use_case.py  test_value_objects.py
(+45 files in other folders)
